Load CSV file into dataframe in lab-07.Rmd
Updated the R Markdown file to load a CSV file into a dataframe.

--- a/lab-07.Rmd
+++ b/lab-07.Rmd
@@ -7,8 +7,10 @@ output: github_document
 
 ### Load packages and data
 
-```{r load-packages, message=FALSE}
-library(tidyverse) 
+```{r load}
+library(tidyverse)
+
+df <- read_csv("kansas_grouped_rolling_avg.csv")
 ```
 
 ### Exercise 1
